# death_and_rope

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cell.hpp  events.puml  imgui.ini  main.cpp  vector_utils.hpp  wconfig.hpp  world_cell.cpp  world_cell.hpp
assets/sprites/: head
assets/textures/: Sprite-0001.aseprite
editor/: main.cpp
game/: main.cpp
src/: archive.hpp  asset.hpp  asset_cache.cpp  asset_cache.hpp  config.hpp  context.hpp  drawable.hpp  engine.cpp  engine.hpp  entity.hpp  events.hpp  file.hpp  import_imgui.hpp  json.hpp  logging.hpp  main.cpp  player.hpp  prod_build_utils.hpp  rect.hpp  rope.cpp  rope.hpp  scene.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  tile.hpp  tile_utils.hpp  types.hpp  vector2.hpp  world.cpp  world.hpp  world_cell.hpp
src/alch/common/: archive.hpp  bitset.hpp  chain_delete.hpp  color.hpp  consts.hpp  file.hpp  hash.hpp  imgui_utils.hpp  json.hpp  macros.hpp  map_utils.hpp  object.hpp  optional.hpp  prod_build_utils.hpp  rect.hpp  smart_ptr.hpp  test_app.cpp  test_app.hpp  test_framework.cpp  test_framework.hpp  type_id.hpp  type_id_utils.hpp  types.hpp  variant.hpp  vector2.hpp
src/alch/common/containers/: deque.hpp  hash_map.hpp  hash_set.hpp  inline_vector.hpp  map.hpp  optional.hpp  recursive_tree.hpp  span.hpp  string.hpp  variant.hpp  vector.hpp
src/alch/engine/: component.hpp  context.cpp  context.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  events.hpp  root_entity.cpp  root_entity.hpp  system.cpp  system.hpp
src/alch/scenes/: default_scene.hpp  dev_menu.cpp  dev_menu.hpp  editor.cpp  editor.hpp  gui_exemple_scene.hpp  main_menu.cpp  main_menu.hpp  test.hpp  test_physics.hpp
src/alch/scenes/ui_editor/: scene.hpp
src/alch/systems/assets/: asset.hpp  asset_cache.cpp  asset_cache.hpp  builtin_font.cpp  builtin_font.hpp  font.hpp  texture.cpp  texture.hpp
src/alch/systems/broker/: broker.cpp  broker.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  transmitter.cpp  transmitter.hpp
src/alch/systems/config/: config.cpp  config.hpp  config_defs.hpp  config_handler.cpp  config_handler.hpp  config_tree.hpp  config_value.hpp  events.hpp  users_home_dir.hpp
src/alch/systems/debug/: debug_system.cpp  debug_system.hpp
src/alch/systems/filesystem/: filesystem.cpp  filesystem.hpp
src/alch/systems/group/: group.cpp  group.hpp  parent.cpp  parent.hpp
src/alch/systems/i18n/: localization.cpp  localization.hpp
src/alch/systems/imgui/: imgui_system.cpp  imgui_system.hpp
src/alch/systems/logging/: logger.cpp  logger.hpp
src/alch/systems/names/: name.cpp  name.hpp  name_system.cpp  name_system.hpp
src/alch/systems/physics/: body.cpp  body.hpp  collider.cpp  collider.hpp  events.hpp  physics.cpp  physics.hpp
src/alch/systems/physics/box2d_settings/: b2_user_settings.h
src/alch/systems/render/: camera.cpp  camera.hpp  circle_component.cpp  circle_component.hpp  drawable.cpp  drawable.hpp  rect_shape.cpp  rect_shape.hpp  render.cpp  render.hpp  render_state.hpp  sprite_component.cpp  sprite_component.hpp
src/alch/systems/scenes/: scene.hpp  scene_generic.hpp  scene_system.cpp  scene_system.hpp
src/alch/systems/scripts/: scripts.cpp  scripts.hpp
src/alch/systems/transform/: events.hpp  transform.cpp  transform.hpp
src/alch/systems/ui/: tests_ui.cpp  ui_button.cpp  ui_button.hpp  ui_element.cpp  ui_element.hpp  ui_events.hpp  ui_field.cpp  ui_field.hpp  ui_lenght.hpp  ui_panel.cpp  ui_panel.hpp  ui_scroll.cpp  ui_scroll.hpp  ui_slider.cpp  ui_slider.hpp  ui_style.cpp  ui_style.hpp  ui_system.cpp  ui_system.hpp  ui_text.cpp  ui_text.hpp  ui_utf8.cpp  ui_utf8.hpp
src/alch/systems/ui/widgets/: ui_button.cpp  ui_button.hpp  ui_checkbox.cpp  ui_checkbox.hpp  ui_choise.cpp  ui_choise.hpp  ui_input.cpp  ui_input.hpp  ui_panel.cpp  ui_panel.hpp  (+6 more)
src/alch/systems/window/: events.hpp  inputs.hpp  window.cpp  window.hpp
src/common/: archive.hpp  consts.hpp  json.hpp  map_utils.hpp  rect.hpp  system.hpp  type_id.hpp  vector2.hpp
src/components/: player.hpp
src/engine/: component.hpp  context.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  system.hpp
src/game/: main.cpp
src/scenes/: dev_menu.cpp  dev_menu.hpp  editor.cpp  editor.hpp  main_menu.cpp  main_menu.hpp  sprite_editor.cpp  sprite_editor.hpp  sprites_view.cpp  sprites_view.hpp  test.hpp  test_physics.hpp  world_editor.cpp  world_editor.hpp
src/systems/assets/: asset.hpp  asset_cache.cpp  asset_cache.hpp  font.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp
src/systems/broker/: broker.hpp  receiver.cpp  receiver.hpp  receiver_component.hpp  sender.cpp  sender.hpp  sender_component.hpp
src/systems/config/: config.cpp  config.hpp
src/systems/debug/: debug_system.cpp  debug_system.hpp
src/systems/filesystem/: filesystem.cpp  filesystem.hpp
src/systems/group/: group.cpp  group.hpp
src/systems/imgui/: imgui_system.cpp  imgui_system.hpp
src/systems/logging/: logger.cpp  logger.hpp
src/systems/namer/: name.cpp  name.hpp  namer.hpp
src/systems/names/: name.cpp  name.hpp  name_system.cpp  name_system.hpp
src/systems/physics/: body.cpp  body.hpp  collider.cpp  collider.hpp  physics.cpp  physics.hpp
src/systems/physics/box2d_settings/: b2_user_settings.h
src/systems/position/: events.hpp  position.cpp  position.hpp
src/systems/render/: camera.cpp  camera.hpp  drawable.hpp  render.cpp  render.hpp  sprite_component.cpp  sprite_component.hpp
src/systems/renderer/: drawable.hpp  renderer.cpp  renderer.hpp  sprite_component.cpp  sprite_component.hpp
src/systems/scenes/: scene.hpp  scene_system.cpp  scene_system.hpp
src/systems/scripts/: scripts.cpp  scripts.hpp
src/systems/transform/: events.hpp  transform.cpp  transform.hpp
src/systems/window/: events.hpp  inputs.hpp  window.cpp  window.hpp
src/tests/engine/: broker_tests.cpp  entity_tests.cpp
tests/: builtin_tests.cpp  inline_tests.cpp
tests/engine/: broker_tests.cpp  entity_tests.cpp  serialization_test.cpp
tests/ui_experiments/: main.cpp
tools/: create_inline_test_main.py  example_i18n.json  i18n.py  test_file.cpp
